--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <title>Registration Form</title>
     <style>
         input#name:invalid:focus{
-            border:1px solid red
+            border:1px solid blue
         }
         input#email:invalid:focus{
-            border:1px solid red
+            border:1px solid violet
         }
 
     </style>
@@ -31,38 +31,38 @@
 
                     <!-- name -->
                     <label for="name" class="text-md w-40 inline-block font-medium leading-5 text-gray-700">
-                        Name
+                        fullName
                     </label>
                     <input required type="text" id="name" name="name"
                            class="bg-gray-100 inline-block rounded-lg shadow-md px-4 py-3 md-5 text-base leading-6 placeholder-gray-500"
-                           placeholder="Enter full name">
+                           placeholder="please enter your full name">
                     <br>
 
                     <!-- email -->
                     <label for="email" class="text-md w-40 inline-block font-medium leading text-gray-700">
-                        Email
+                        mail
                     </label>
                     <input type="email" id="email" name="email"
                            class="bg-gray-100 inline-block rounded-lg shadow-md px-4 py-3 md-5 text-base leading-6 placeholder-gray-500"
-                           placeholder="Enter the Email">
+                           placeholder="please enter your email">
                     <br>
 
                     <!-- password -->
                     <label for="password" class="text-md w-40 inline-block font-medium leading-5 text-gray-700">
-                        Password
+                        Passcode
                     </label>
                     <input required type="password" id="password" name="password"
                            class="bg-gray-100 inline-block rounded-lg shadow-md px-4 py-3 md-5 text-base leading-6 placeholder-gray-500"
-                           placeholder="Enter password">
+                           placeholder="please enter your passcode">
                     <br>
 
                     <!-- dob -->
                     <label for="dob" class="text-md w-40 inline-block font-medium leading-5 text-gray-700">
-                        Date of Birth
+                        birthday
                     </label>
                     <input type="date" id="dob" name="dob"
                            class="bg-gray-100 inline-block rounded-lg shadow-md px-4 py-3 md-5 text-base leading-6 placeholder-gray-500"
-                           placeholder="Enter full name">
+                           placeholder="please enter your full name">
                     <br>
                     
                     <div class="flex justify-start gap-3 inline-block align-middle">
